Update testimonial content and contact information in index.html

--- a/index.html
+++ b/index.html
@@ -594,8 +594,7 @@
                                              <h4>Barbie</h4>
                                              <span>Art Director</span>
                                         </div>
-                                        <p>Donec erat libero, blandit vitae arcu eu, lacinia placerat justo. Sed
-                                             sollicitudin quis felis vitae hendrerit.</p>
+                                        <p></p>
                                         <div class="tst-rating">
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
@@ -611,11 +610,10 @@
                                              <img src="images/tst-image4.jpg" class="img-responsive" alt="">
                                         </div>
                                         <div class="tst-author">
-                                             <h4>Andrio</h4>
+                                             <h4>Andriod</h4>
                                              <span>Web Developer</span>
                                         </div>
-                                        <p>Nam eget mi eu ante faucibus viverra nec sed magna. Vivamus viverra sapien
-                                             ex, elementum varius ex sagittis vel.</p>
+                                        <p></p>
                                         <div class="tst-rating">
                                              <i class="fa fa-star"></i>
                                              <i class="fa fa-star"></i>
@@ -707,8 +705,8 @@
                                    <h2>Contact Info</h2>
                               </div>
                               <address>
-                                   <p>+65 2244 1100, +66 1800 1100</p>
-                                   <p><a href="mailto:youremail.co">hello@youremail.co</a></p>
+                                   <p>+65 2244 </p>
+                                   <p><a href="mailto:youremail.co">info@horizongbs.com.edu.np</a></p>
                               </address>
 
                               <div class="footer_menu">
